# xvr

./: .clang-format  .editorconfig  .gitignore  07_function.xvr  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  codacy.yml  compile_flags.txt  main.xvr  makefile  test_eq2  test_len2.xvr  test_lexer.xvr  test_lexer.xvr.ll  test_math_all.xvr
.github/workflows/: ci.yml  fuzzer.yml  stage0.yml
code/: abs_test.xvr  adding_test.xvr  array_index.xvr  assert_array.xvr  author.xvr  chaining_dot.xvr  compare.xvr  conditional.xvr  data_table.xvr  else_if.xvr  emit_pass.xvr  fibo.xvr  fibonaci.xvr  fibonaci_memo.xvr  format_string_test.xvr  length_data.xvr  linear_regression.xvr  loop_while.xvr  memory_leak.xvr  print_concat.xvr  print_support.xvr  procedure.xvr  scope_data.xvr  sheabang.xvr  test_array_insert_loop.xvr  test_array_len.xvr  test_array_oob_loop.xvr  test_cast.xvr  test_for_array.xvr  test_len2.xvr  test_len3.xvr  test_math_all.xvr  test_math_const.xvr  test_math_edge.xvr  test_math_stress.xvr  type.xvr  variable.xvr  with_array.xvr  xvr.xvr
code/lib/: compound.xvr  standard.xvr  timer.xvr
compiler/: CMakeLists.txt  Makefile  compiler_tools.c  compiler_tools.h  lib_runner.c  lib_timer.h  main_compiler.c
docs/: BUILD_WINDOWS.md  LLVM.md  SECD.md  bytecode_implementation.md  compile_guide.md  emit_intel.md  math_module.md  pre-commit.md  print_handler.md  stdlib.md
docs/tutorial/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md  chapter8.md  chapter9.md
fuzzer/: .gitignore  README.md  TEST_COVERAGE.md  build.sh  fuzz_test_suite.sh  run_fuzzer.sh  stress_test.sh  test_fuzz_comprehensive.c  test_fuzz_edge_cases.c  test_fuzz_math.c  test_fuzz_math_v2  test_fuzz_math_v2.c  test_fuzz_stress.c
fuzzer/corpus/: 00_minimal.xvr  01_arithmetic.xvr  02_string.xvr  03_array.xvr  04_if.xvr  05_while.xvr  06_for.xvr  07_function.xvr  08_operators.xvr  09_mixed_array.xvr  10_if_else.xvr  11_println.xvr  12_println_format.xvr  13_println_vars.xvr  15_print_array.xvr  16_cast_int_to_int.xvr  17_cast_int_float.xvr  18_cast_edge_cases.xvr  19_cast_bugs.xvr  20_cast_all_combos.xvr  30_math_basic.xvr  31_math_edge_values.xvr  32_math_stress.xvr
fuzzer/harness/: fuzz_libfuzzer  fuzz_libfuzzer.c  fuzz_main.c  fuzz_standalone.c
inter/: Makefile  inter_main.c  inter_tools.c  inter_tools.h  lib_about.c  lib_about.h  lib_compound.c  lib_compound.h  lib_runner.c  lib_runner.h  lib_standard.c  lib_standard.h  lib_timer.c  lib_timer.h  main.c  makefile
lib/std/: io.mod  io.xvr  math.mod  math.xvr  std.mod
src/: CMakeLists.txt  Makefile  makefile  xvr.h  xvr_array.c  xvr_array.h  xvr_ast.c  xvr_ast.h  xvr_ast_node.c  xvr_ast_node.h  xvr_bucket.c  xvr_bucket.h  xvr_builtin.c  xvr_builtin.cpp  xvr_builtin.h  xvr_bytecode.c  xvr_bytecode.h  xvr_cast_emit.cpp  xvr_cast_emit.h  xvr_chunk.c  xvr_chunk.h  xvr_common.c  xvr_common.cpp  xvr_common.h  xvr_common.hpp  xvr_compiler.c  xvr_compiler.h  xvr_console_color.h  xvr_console_colors.h  xvr_debug.h  xvr_format_string.c  xvr_format_string.cpp  xvr_format_string.h  xvr_function.c  xvr_function.h  xvr_interpreter.c  xvr_interpreter.h  xvr_keyword.c  xvr_keyword.h  xvr_keyword_types.c  (+72 more)
src/adapters/llvm/: xvr_asm_config.c  xvr_asm_config.cpp  xvr_asm_config.h  xvr_llvm_backend.h  xvr_llvm_codegen.c  xvr_llvm_codegen.cpp  xvr_llvm_codegen.h  xvr_llvm_codegen.hpp  xvr_llvm_context.cpp  xvr_llvm_context.h  xvr_llvm_context.hpp  xvr_llvm_control_flow.c  xvr_llvm_control_flow.cpp  xvr_llvm_control_flow.h  xvr_llvm_expression_emitter.cpp  xvr_llvm_expression_emitter.h  xvr_llvm_function_emitter.cpp  xvr_llvm_function_emitter.h  xvr_llvm_ir_builder.cpp  xvr_llvm_ir_builder.h  xvr_llvm_module_manager.c  xvr_llvm_module_manager.cpp  xvr_llvm_module_manager.h  xvr_llvm_optimizer.c  xvr_llvm_optimizer.cpp  xvr_llvm_optimizer.h  xvr_llvm_target.c  xvr_llvm_target.cpp  xvr_llvm_target.h  xvr_llvm_type_mapper.cpp  xvr_llvm_type_mapper.h
src/backend/: xvr_llvm_codegen.c  xvr_llvm_codegen.h  xvr_llvm_context.c  xvr_llvm_context.h  xvr_llvm_control_flow.c  xvr_llvm_control_flow.h  xvr_llvm_expression_emitter.c  xvr_llvm_expression_emitter.h  xvr_llvm_function_emitter.c  xvr_llvm_function_emitter.h  xvr_llvm_ir_builder.c  xvr_llvm_ir_builder.h  xvr_llvm_module_manager.c  xvr_llvm_module_manager.h  xvr_llvm_optimizer.c  xvr_llvm_optimizer.h  xvr_llvm_target.c  xvr_llvm_target.h  xvr_llvm_type_mapper.c  xvr_llvm_type_mapper.h
src/core/ast/: xvr_ast_node.c  xvr_ast_node.h  xvr_ast_node.hpp
src/core/ir/: xvr_ir.c  xvr_ir.cpp  xvr_ir.h  xvr_ir_generator.c  xvr_ir_generator.cpp  xvr_ir_generator.h
src/core/semantic/: xvr_semantic.c  xvr_semantic.cpp  xvr_semantic.h
src/core/types/: xvr_type.c  xvr_type.cpp  xvr_type.h  xvr_type.hpp
src/optimizer/: xvr_ast_optimizer.c  xvr_ast_optimizer.cpp  xvr_ast_optimizer.h
src/ports/output/: diagnostics_port.h
src/sema/: xvr_builtin.c  xvr_builtin.cpp  xvr_builtin.h
stage0/: build.sh  run_tests.sh  stage0
stage0/examples/: fib.xvr
stage0/fuzzer/: build.sh  fuzz_all  fuzz_all.c  fuzz_lexer  fuzz_lexer.c
stage0/src/: ast.xvr  codegen.xvr  lexer.xvr  main.xvr  parser.xvr  token.xvr
stage0/tests/: README.md  t2.xvr  test_codegen.xvr  test_codegen_stage0.xvr  test_lexer  test_lexer.xvr  test_lexer_stage0.xvr  test_parser.xvr  test_parser_stage0.xvr  (+3 more)
test/: CMakeLists.txt  Makefile  makefile  regression_tests.sh  test_all.c  test_ast_node.c  test_ast_node.cpp  test_compiler.c  test_compiler.cpp  test_from_host.c  test_interpreter.c  test_lexer.c  test_lexer.cpp  test_literal.c  test_literal.cpp  test_llvm_backend.c  test_llvm_backend.cpp  test_memory.c  test_memory.cpp  test_opaque.c  test_parser.c  test_parser.cpp  test_scope.c  test_scope.cpp  test_std.c  test_std.cpp  xvr_test.h  xvr_test.hpp  xvr_test_main.cpp
test/fixtures/: xvr_test_fixture.cpp  xvr_test_fixture.h
test/scripts/: call_host.xvr
test/xvr_file/: basic_variables.xvr  compiler.xvr  loops_compound.xvr  nested_blocks.xvr  opaque_data.xvr  procedure.xvr  semicolon_test.xvr
tests/: makefile
(+44 files in other folders)
